--- a/profiling/org.eclipse.linuxtools.rdt.proxy/plugin.xml
+++ b/profiling/org.eclipse.linuxtools.rdt.proxy/plugin.xml
@@ -4,7 +4,8 @@
    <extension
          point="org.eclipse.linuxtools.profiling.launch.RemoteProxyManager">
       <manager
-            class="org.eclipse.linuxtools.rdt.proxy.RDTProxyManager">
+            class="org.eclipse.linuxtools.rdt.proxy.RDTProxyManager"
+            nature="org.eclipse.ptp.rdt.core.remoteNature">
       </manager>
    </extension>
 
