--- a/profiling/org.eclipse.linuxtools.rdt.proxy/plugin.xml
+++ b/profiling/org.eclipse.linuxtools.rdt.proxy/plugin.xml
@@ -8,5 +8,12 @@
             nature="org.eclipse.ptp.rdt.core.remoteNature">
       </manager>
    </extension>
+   <extension
+         point="org.eclipse.linuxtools.profiling.launch.RemoteProxyManager">
+      <manager
+            class="org.eclipse.linuxtools.rdt.proxy.RDTProxyManager"
+            nature="org.eclipse.ptp.rdt.sync.core.remoteSyncNature">
+      </manager>
+   </extension>
 
 </plugin>
