Fix for bug 360085.
	Bug #360085 - apply Martin Oberhuber's patch and add remove marker
capability.

	* plugin.xml: Add clear markers command button in Valgrind view.
	* plugin.properties: New messages for clear markers command.
	*
src/org/eclipse/linuxtools/internal/valgrind/launch/ClearMarkersHandler.java:
New file.
	*
src/org/eclipse/linuxtools/internal/valgrind/launch/ValgrindLaunchConfigurationDelegate.java
(finalLaunchCheck): Clear
	markers on new launch.

--- a/valgrind/org.eclipse.linuxtools.valgrind.launch/plugin.xml
+++ b/valgrind/org.eclipse.linuxtools.valgrind.launch/plugin.xml
@@ -104,6 +104,25 @@
       </menuContribution>
    </extension>
    <extension
+         point="org.eclipse.ui.commands">
+      <command
+            description="%command.description.1"
+            id="org.eclipse.linuxtools.valgrind.launch.clearMarkersCommand"
+            name="%command.name.1">
+      </command>
+   </extension>
+   <extension
+         point="org.eclipse.ui.menus">
+            <menuContribution
+            locationURI="toolbar:org.eclipse.linuxtools.valgrind.ui.valgrindview?after=toolbarLocal">
+         <command
+               commandId="org.eclipse.linuxtools.valgrind.launch.clearMarkersCommand"
+               icon="icons/clear_markers.gif"
+               style="push">
+         </command>
+      </menuContribution>
+   </extension>
+   <extension
          point="org.eclipse.ui.exportWizards">
       <wizard
             class="org.eclipse.linuxtools.internal.valgrind.launch.ValgrindExportWizard"
@@ -122,12 +141,26 @@
             commandId="org.eclipse.linuxtools.valgrind.launch.exportCommand">
       </handler>
    </extension>
+    <extension
+         point="org.eclipse.ui.handlers">
+      <handler
+            class="org.eclipse.linuxtools.internal.valgrind.launch.ClearMarkersHandler"
+            commandId="org.eclipse.linuxtools.valgrind.launch.clearMarkersCommand">
+      </handler>
+   </extension>
       <extension
          id="org.eclipse.linuxtools.valgrind.launch.marker"
          name="%marker.name"
          point="org.eclipse.core.resources.markers">
       <super
-            type="org.eclipse.cdt.core.problem">
+            type="org.eclipse.core.resources.problemmarker">
       </super>
+      <super
+            type="org.eclipse.core.resources.textmarker">
+      </super>
+      <persistent
+            value="true">
+      </persistent>
+      <attribute name="externalLocation"/>
    </extension>
 </plugin>
