--- a/valgrind/org.eclipse.linuxtools.valgrind.launch/plugin.properties
+++ b/valgrind/org.eclipse.linuxtools.valgrind.launch/plugin.properties
@@ -8,6 +8,8 @@ extension-point.name.0 = Valgrind Tool
 extension-point.name.1 = Valgrind Output Directory Providers
 command.name.0 = Export Valgrind Log Files
 command.description.0 = Exports Valgrind log output to a directory
+command.name.1 = Remove Valgrind Markers
+command.description.1 = Removes all Valgrind markers
 wizard.name.0 = Valgrind Log Files
 wizard.description.0 = Export Valgrind's output logs from a recent launch to the file system.
 marker.name = Valgrind Problem
