--- a/valgrind/org.eclipse.linuxtools.valgrind.ui/plugin.properties
+++ b/valgrind/org.eclipse.linuxtools.valgrind.ui/plugin.properties
@@ -3,3 +3,6 @@ view.name.0 = Valgrind
 Bundle-Vendor.0 = Eclipse Linux Tools
 Bundle-Name.0 = Valgrind UI Plug-in (Incubation)
 extension-point.name.0 = valgrindToolViews
+marker.editor.error = Valgrind Errors
+marker.editor.warning = Valgrind Warnings
+marker.editor.info = Valgrind Info
